Fix dark mode leaking into homepage buttons

--- a/assets/styles/framework.scss
+++ b/assets/styles/framework.scss
@@ -1,3 +1,8 @@
+:root {
+    --color-landing-text: #000;
+    --color-landing-hero-text: #242424;
+}
+
 html {
 }
 
